play each index music

--- a/pages/playtunes.html
+++ b/pages/playtunes.html
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                     
-                    <div class="next-holder">
+                    <div class="next-holder next-btn">
                         <img src="/images/vuesax/bold/vuesax/bold/next1.png" alt="nextbutton" class="im1">
                         <img src="/images/vuesax/bold/vuesax/bold/next2.png" alt="nextbutton" class="im2">
                     </div>
