--- a/pages/playlist.html
+++ b/pages/playlist.html
@@ -188,10 +188,15 @@
                     <div class="sound-holder">
                         <div class="snd-icon">
                             <img src="/images/sound/vuesax/bold/vuesax/bold/Vector1.png" alt="">
-                            <img src="/images/sound/vuesax/bold/vuesax/bold/Vector2.png" alt="">
-                            <img src="/images/sound/vuesax/bold/vuesax/bold/Vector3.png" alt="">
+                            <div class="sound-sh">
+                                <div  class="hide-vol">
+                                    <img src="/images/sound/vuesax/bold/vuesax/bold/Vector2.png" alt="">
+                                    <img src="/images/sound/vuesax/bold/vuesax/bold/Vector3.png" alt="">
+                                </div>
+                            </div>
+                            
                         </div>
-                        <input type="range" value="0" min="1" max="100" class="volume-slider">
+                        <input type="range" max="1" value="1" step="0.1" class="volume-slider">
                     </div>
                     
                 </div>
